0603 new sumocfg and new route flow

--- a/sumo_rl/nets/2way-single-intersection/single-intersection.netc.cfg
+++ b/sumo_rl/nets/2way-single-intersection/single-intersection.netc.cfg
@@ -2,11 +2,13 @@
     <input>
         <edge-files value="single-intersection.edg.xml"/>
         <node-files value="single-intersection.nod.xml"/>
+        <connection-files value="single-intersection.con.xml"/>
     </input>
     <output>
         <output-file value="single-intersection-2.net.xml"/>
     </output>
     <processing>
         <no-turnarounds value="true"/>
+        <lefthand value="true"/>
     </processing>
 </configuration>
